Registering Service in Consul (Service Discovery) using IHostedService

--- a/src/TeaMaki.Menu/appsettings.json
+++ b/src/TeaMaki.Menu/appsettings.json
@@ -7,8 +7,16 @@
     }
   },
   "AllowedHosts": "*",
-  "Database" : {
-    "DatabaseName" : "Menu",
-    "Urls": ["http://localhost:8080"]
+  "Database": {
+    "DatabaseName": "Menu",
+    "Urls": [ "http://localhost:8080" ]
+  },
+  "Menu": {
+    "Url": "https://localhost:5001",
+    "ServiceName": "Menu",
+    "ServiceId":  "Menu-1"
+  },
+  "Consul": {
+    "Url":  "http://localhost:8500"
   }
 }
