--- a/src/TeaMaki.Menu/TeaMaki.Menu.csproj
+++ b/src/TeaMaki.Menu/TeaMaki.Menu.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Consul" Version="1.6.1.1" />
     <PackageReference Include="RavenDB.Client" Version="5.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
